--- a/index.html
+++ b/index.html
@@ -6,9 +6,33 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Adnan Muhtadi Portfolio</title>
+
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+
     </head>
     <body>
+        <header>
+            <a href="index.html">
+                <h2 id="logo" a href="index.html">Adnan Muhtadi Portfolio</h2>
+            </a>
+            <nav>
+                <ul id="menu">
+                    <li>
+                        <a href="journey.html">My Journey</a>
+                    </li>
 
+                    <li>
+                        <a href="portfolio.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="connect.html">Connect</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section>
+
+        </section>
 
 
     </body>
