--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 
+        <!-- font awesome for icons -->
+        <script src="https://kit.fontawesome.com/9b32562ec0.js" crossorigin="anonymous"></script>
+
     </head>
     <body>
         <header>
             <a href="index.html">
-                <h2 id="logo" a href="index.html">Adnan Muhtadi Portfolio</h2>
+                <h2 id="logo" a href="index.html">Home</h2>
             </a>
             <nav>
                 <ul id="menu">
@@ -30,10 +33,40 @@
                 </ul>
             </nav>
         </header>
-        <section>
 
+<!--Header of the page-->
+        <section id="hero">
+            <div id=hero-image></div>
+            <div id="hero-text">
+                <h2>Adnan Muhtadi</h2>
+                <h3>Personal Portfolio</h3>
+
+<!--add a button here-->
+<!--           Button to be-->
+
+            </div>
         </section>
 
+        <section id="about-me">
+            <h2 id="header">About Me</h2>
+
+<!--description about myself-->
+            <div class="about-me">
+                <div class="about-me-des">
+                    A versatile Product Manager professional with over 5 years’ experience with enterprise-level and consumer-focused technology solutions. Champions supportive and collaborative team environments to effectively realise business objectives with proven success in developing and implementing internal and consumer-facing IP.
+                </div>
+            </div>
+        </section>
+
+        <section id="interests">
+            <h2>Interests</h2>
+            <div class="categories">
+<!--                add the categories in the necessary         -->
+
+
+
+            </div>
+        </section>
 
     </body>
 </html>
