--- a/index.html
+++ b/index.html
@@ -1,72 +1,140 @@
-
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Adnan Muhtadi Portfolio</title>
 
-        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Adnan Muhtadi Portfolio</title>
 
-        <!-- font awesome for icons -->
-        <script src="https://kit.fontawesome.com/9b32562ec0.js" crossorigin="anonymous"></script>
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 
-    </head>
-    <body>
-        <header>
-            <a href="index.html">
-                <h2 id="logo" a href="index.html">Home</h2>
-            </a>
-            <nav>
-                <ul id="menu">
-                    <li>
-                        <a href="journey.html">My Journey</a>
-                    </li>
+    <!-- font awesome for icons -->
+    <script src="https://kit.fontawesome.com/9b32562ec0.js" crossorigin="anonymous"></script>
 
-                    <li>
-                        <a href="portfolio.html">Portfolio</a>
-                    </li>
-                    <li>
-                        <a href="connect.html">Connect</a>
-                    </li>
-                </ul>
-            </nav>
-        </header>
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-<!--Header of the page-->
-        <section id="hero">
-            <div id=hero-image></div>
-            <div id="hero-text">
-                <h2>Adnan Muhtadi</h2>
-                <h3>Personal Portfolio</h3>
+</head>
 
-<!--add a button here-->
-<!--           Button to be-->
+<body>
 
+<!--        navigation bar   -->   
+    <header>
+        <a href="index.html">
+            <h2 id="home" a href="index.html">Home</h2>
+        </a>
+        
+        <nav>
+            <ul id="navbar-menu">
+                <li>
+                    <a href="connect.html">Connect</a>
+                </li>
+
+                <li>
+                    <a href="portfolio.html">Portfolio</a>
+                </li>
+
+                <li>
+                    <a href="journey.html">My Journey</a>
+                </li>
+
+            </ul>
+        </nav>
+    </header>
+
+    <!--image header of the page-->
+    <section id="main-space">
+        <div id=main-image></div>
+        <div id="main-text">
+            <h2>Adnan Muhtadi</h2>
+            <h3>Personal Portfolio</h3>
+
+            <!--add a button here-->
+            <!--           Button to be-->
+
+        </div>
+    </section>
+
+    <section id="about-me">
+        <h2 id="header">About Me</h2>
+
+        <!--description about myself-->
+        <div class="about-me">
+            <div class="about-me-des">
+                A versatile Product Manager professional with over 5 years’ experience with enterprise-level and consumer-focused technology solutions. Champions supportive and collaborative team environments to effectively realise business objectives with proven success in developing and implementing internal and consumer-facing IP.
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section id="about-me">
-            <h2 id="header">About Me</h2>
+    <section id="interests">
+        <h2>Interests</h2>
+        <div class="categories">
+            <!--                add the categories in the necessary         -->
 
-<!--description about myself-->
-            <div class="about-me">
-                <div class="about-me-des">
-                    A versatile Product Manager professional with over 5 years’ experience with enterprise-level and consumer-focused technology solutions. Champions supportive and collaborative team environments to effectively realise business objectives with proven success in developing and implementing internal and consumer-facing IP.
+
+
+        </div>
+    </section>
+
+    <footer class="footer-brief">
+        <div class="row no-gutter footer-container">
+
+            <div class="col-12 col-md-4 quick-links">
+                <a href="#" class="">
+                    <h5 id="#">Quick Links</h5>
+                </a>
+                <div class="qlinks">
+                    <a href="contact_me.html" class="foot-email">
+                        <h5 id="email_address_head"><strong>Home</strong></h5>
+                    </a>
+
+                    <a href="my_projects.html" class="foot-projects">
+                        <h5 id="project_footer_head">My Journey</h5>
+                    </a>
+                    <a href="my_projects.html" class="foot-projects">
+                        <h5 id="project_footer_head">Portfolio</h5>
+                    </a>
+                    <a href="my_projects.html" class="foot-projects">
+                        <h5 id="project_footer_head">Connect</h5>
+                    </a>
                 </div>
             </div>
-        </section>
+            <div class="col-12 col-md-4 social_links">
+                <h5 id="">Let's Connect</h5>
 
-        <section id="interests">
-            <h2>Interests</h2>
-            <div class="categories">
-<!--                add the categories in the necessary         -->
+                <div class="logos">
 
+                    <a href="https://www.facebook.com/adnan.muhtadi/" target="_blank"><i class="fab fa-facebook"></i></a>
 
+                    <a href="https://www.instagram.com/adnanmuhtadi/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
+
+                    <a href="https://twitter.com/adnanmuhtadi" target="_blank"><i class="fab fa-twitter"></i></a>
+
+                    <a href="https://www.youtube.com/channel/UCt64hh9dMACG43Vuzc5DrtQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
+
+                    <a href="https://www.linkedin.com/in/adnan-muhtadi-3588243b/" target="_blank"><i class="fab fa-linkedin"></i></a>
+
+                    <a href="https://www.snapchat.com/l/en-gb/" target="_blank"><i class="fab fa-snapchat"></i></a>
+
+                    <a href="https://www.pinterest.co.uk/adnanmuhtadi/_saved/" target="_blank"><i class="fab fa-pinterest"></i></a>
+
+                    <a href="https://github.com/adnanmuhtadi" target="_blank"><i class="fab fa-github"></i></a>
+                </div>
 
             </div>
-        </section>
 
-    </body>
+            <div class="col-12 col-md-4">
+                <a href="" target="_blank">
+                    <h5>Take A Copy Of My CV!</h5>
+                    <div class="logos">
+                        <i class="fas fa-file" aria-hidden="true"></i>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </footer>
+
+</body>
+
 </html>
