Navigation bar with Main image
Completed home screen image and finalised the Navigation bar.

Also added a picture of myself within the  main image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!--        navigation bar   -->   
     <header>
         <a href="index.html">
-            <h2 id="home" a href="index.html">Home</h2>
+            <h2 id="home" a href="index.html">Adnan Muhtadi</h2>
         </a>
         
         <nav>
@@ -46,13 +46,17 @@
     <!--image header of the page-->
     <section id="main-space">
         <div id=main-image></div>
-        <div id="main-text">
-            <h2>Adnan Muhtadi</h2>
-            <h3>Personal Portfolio</h3>
-
+        <div id="main-me">
+            <img src="assets/images/me.jpg" height="400px" width="400px">
+        
+            <div class="main-me-text">
+               <div class="title">
+                    <h2>Project Manager / Trainee Full Stake Developer</h2>
+                    <h3>Personal Portfolio</h3>
+                </div>
+            </div>
             <!--add a button here-->
             <!--           Button to be-->
-
         </div>
     </section>
 
