--- a/connect.html
+++ b/connect.html
@@ -1,181 +1,187 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Adnan Muhtadi Portfolio</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Adnan Muhtadi Portfolio</title>
 
-        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 
-        <!-- font awesome for icons -->
-        <script src="https://kit.fontawesome.com/9b32562ec0.js" crossorigin="anonymous"></script>
+    <!-- font awesome for icons -->
+    <script src="https://kit.fontawesome.com/9b32562ec0.js" crossorigin="anonymous"></script>
 
-        <!-- CSS only -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-    </head>
+</head>
 
-    <body>
+<body>
 
-        <!--        navigation bar   -->
-        <header>
-            <a href="index.html">
-                <h2 id="home" a href="index.html">Adnan Muhtadi</h2>
-            </a>
+    <!--        navigation bar with the active class when on the actual page  -->
+    <header>
+        <a href="index.html">
+            <h2 id="home" a href="index.html">Adnan Muhtadi</h2>
+        </a>
 
-            <nav>
-                <ul id="navbar-menu">
-                    <li>
-                        <a href="connect.html">Connect</a>
-                    </li>
+        <nav>
+            <ul id="navbar-menu">
+                <li>
+                    <a class="active" href="connect.html">Connect</a>
+                </li>
 
-                    <li>
-                        <a href="portfolio.html">Portfolio</a>
-                    </li>
+                <li>
+                    <a href="portfolio.html">Portfolio</a>
+                </li>
 
-                    <li>
-                        <a href="journey.html">My Journey</a>
-                    </li>
+                <li>
+                    <a href="journey.html">My Journey</a>
+                </li>
 
-                </ul>
-            </nav>
-        </header>
+            </ul>
+        </nav>
+    </header>
 
-        <!--image header of the page-->
-        <section id="main-space">
-            <div id=main-image4></div>
-            <div id="main-me" style="text-align: center;">
+    <!--image header of the page-->
+    <section id="main-space">
+        <div id=main-image4></div>
+        <div id="main-me" style="text-align: center;">
 
-                <div class="main-me-text">
-                    <div class="title">
-                        <h2>Project Manager / Trainee Full Stake Developer</h2>
-                        <h3>Personal Portfolio</h3>
-                    </div>
-                </div>
-                <!--add a button here-->
-                <!--           Button to be-->
-            </div>
-        </section>
-
-        <section id="about-me">
-            <h2 id="header">A Few Ways To Reach Out!</h2>
-
-            <!--description about myself-->
-            <div class="about-me">
-                <div class="about-me-des">
-                    Looking to ask a question?<br>
-                    Looking to know more about me? <br>
-                    or evening looking for an idea to be developed?
+            <div class="main-me-text">
+                <div class="title">
+                    <h2>Project Manager / Trainee Full Stake Developer</h2>
+                    <h3>Personal Portfolio</h3>
                 </div>
             </div>
+            <!--add a button here-->
+            <!--           Button to be-->
+        </div>
+    </section>
 
-            <div class="center-form">
-                <form>
-                   <div class="row">
-                       <div class="labelatt">
-                           <label for="fullname">Full Name:</label>
-                       </div>
-                       <div class="textentry">
-                           <input type="text" id="fullname" name="name" required>
-                       </div>
-                   </div>
+    <!-- The body of the content displayed which is for the questoin and contact form -->
+    <section id="content">
+        <h2 id="header">A Few Ways To Reach Out!</h2>
 
-                   <div class="row">
-                       <div class="labelatt">
-                           <label for="email">Email Address:</label>
-                       </div>
-                       <div class="textentry">
-                           <input type="text" id="email" name="emailaddress" required>
-                       </div>
-                   </div>
-
-                   <div class="row">
-                       <div class="labelatt">
-                           <label for="number">Number</label>
-                       </div>
-                       <div class="textentry">
-                           <input type="text" id="number" name="phonenumber">
-                       </div>
-                   </div>
-
-                   <div class="row">
-                       <div class="labelatt">
-                           <label for="message">Comment:</label>
-                       </div>
-                       <div class="textentry">
-                           <textarea id="comment" name="comment"></textarea>
-                       </div>
-                   </div>
-                   <br>
-                    <div class="row">
-                        <input type="submit" value="Submit">
-                    </div>
-                   <br>
-
-                 </form>
+        <!-- the questions to bring the users attention-->
+        <div class="main-content">
+            <div class="questions">
+                Looking to ask a question?<br>
+                Looking to know more about me? <br>
+                or even looking for an idea to be developed?
             </div>
-        </section>
+        </div>
+<br>
+<br>
+        <div class="center-form">
 
-        <footer class="footer-brief">
-            <div class="row no-gutter footer-container">
+            <h2 id="contactlabel">Contact Form</h2>
+            <form>
+                <div class="row">
+                    <div class="labelatt">
+                        <label for="fullname">Full Name:</label>
+                    </div>
+                    <div class="textentry">
+                        <input type="text" id="fullname" name="name" required>
+                    </div>
+                </div>
 
-                <div class="col-12 col-md-4 quick-links">
-                    <a href="#" class="">
-                        <h5 id="#">Quick Links</h5>
+                <div class="row">
+                    <div class="labelatt">
+                        <label for="email">Email Address:</label>
+                    </div>
+                    <div class="textentry">
+                        <input type="text" id="email" name="emailaddress" required>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="labelatt">
+                        <label for="number">Number</label>
+                    </div>
+                    <div class="textentry">
+                        <input type="text" id="number" name="phonenumber">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="labelatt">
+                        <label for="message">Comment:</label>
+                    </div>
+                    <div class="textentry">
+                        <textarea id="comment" name="comment"></textarea>
+                    </div>
+                </div>
+                <br>
+                <input type="submit" value="Submit">
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+
+            </form>
+        </div>
+    </section>
+
+    <footer class="footer-brief">
+        <div class="row no-gutter footer-container">
+
+            <div class="col-12 col-md-4 quick-links">
+                <a href="#" class="">
+                    <h5 id="#">Quick Links</h5>
+                </a>
+                <div class="qlinks">
+                    <a href="contact_me.html" class="foot-email">
+                        <h5 id="email_address_head"><strong>Home</strong></h5>
                     </a>
-                    <div class="qlinks">
-                        <a href="contact_me.html" class="foot-email">
-                            <h5 id="email_address_head"><strong>Home</strong></h5>
-                        </a>
 
-                        <a href="my_projects.html" class="foot-projects">
-                            <h5 id="project_footer_head">My Journey</h5>
-                        </a>
-                        <a href="my_projects.html" class="foot-projects">
-                            <h5 id="project_footer_head">Portfolio</h5>
-                        </a>
-                        <a href="my_projects.html" class="foot-projects">
-                            <h5 id="project_footer_head">Connect</h5>
-                        </a>
-                    </div>
+                    <a href="my_projects.html" class="foot-projects">
+                        <h5 id="project_footer_head">My Journey</h5>
+                    </a>
+                    <a href="my_projects.html" class="foot-projects">
+                        <h5 id="project_footer_head">Portfolio</h5>
+                    </a>
+                    <a href="my_projects.html" class="foot-projects">
+                        <h5 id="project_footer_head">Connect</h5>
+                    </a>
                 </div>
-                <div class="col-12 col-md-4 social_links">
-                    <h5 id="">Let's Connect</h5>
+            </div>
+            <div class="col-12 col-md-4 social_links">
+                <h5 id="">Let's Connect</h5>
 
+                <div class="logos">
+
+                    <a href="https://www.facebook.com/adnan.muhtadi/" target="_blank"><i class="fab fa-facebook"></i></a>
+
+                    <a href="https://www.instagram.com/adnanmuhtadi/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
+
+                    <a href="https://twitter.com/adnanmuhtadi" target="_blank"><i class="fab fa-twitter"></i></a>
+
+                    <a href="https://www.youtube.com/channel/UCt64hh9dMACG43Vuzc5DrtQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
+
+                    <a href="https://www.linkedin.com/in/adnan-muhtadi-3588243b/" target="_blank"><i class="fab fa-linkedin"></i></a>
+
+                    <a href="https://www.snapchat.com/l/en-gb/" target="_blank"><i class="fab fa-snapchat"></i></a>
+
+                    <a href="https://www.pinterest.co.uk/adnanmuhtadi/_saved/" target="_blank"><i class="fab fa-pinterest"></i></a>
+
+                    <a href="https://github.com/adnanmuhtadi" target="_blank"><i class="fab fa-github"></i></a>
+                </div>
+
+            </div>
+
+            <div class="col-12 col-md-4">
+                <a href="" target="_blank">
+                    <h5>Take A Copy Of My CV!</h5>
                     <div class="logos">
-
-                        <a href="https://www.facebook.com/adnan.muhtadi/" target="_blank"><i class="fab fa-facebook"></i></a>
-
-                        <a href="https://www.instagram.com/adnanmuhtadi/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
-
-                        <a href="https://twitter.com/adnanmuhtadi" target="_blank"><i class="fab fa-twitter"></i></a>
-
-                        <a href="https://www.youtube.com/channel/UCt64hh9dMACG43Vuzc5DrtQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
-
-                        <a href="https://www.linkedin.com/in/adnan-muhtadi-3588243b/" target="_blank"><i class="fab fa-linkedin"></i></a>
-
-                        <a href="https://www.snapchat.com/l/en-gb/" target="_blank"><i class="fab fa-snapchat"></i></a>
-
-                        <a href="https://www.pinterest.co.uk/adnanmuhtadi/_saved/" target="_blank"><i class="fab fa-pinterest"></i></a>
-
-                        <a href="https://github.com/adnanmuhtadi" target="_blank"><i class="fab fa-github"></i></a>
+                        <i class="fas fa-file" aria-hidden="true"></i>
                     </div>
-
-                </div>
-
-                <div class="col-12 col-md-4">
-                    <a href="" target="_blank">
-                        <h5>Take A Copy Of My CV!</h5>
-                        <div class="logos">
-                            <i class="fas fa-file" aria-hidden="true"></i>
-                        </div>
-                    </a>
-                </div>
+                </a>
             </div>
-        </footer>
+        </div>
+    </footer>
 
-    </body>
+</body>
 
 </html>
