Contact Page finalised
Completed the content and format of the HTML Contact page, with the web styling

--- a/connect.html
+++ b/connect.html
@@ -43,20 +43,19 @@
         </nav>
     </header>
 
-    <!--image header of the page-->
+    <!--image header of the page with the main space defining the area and the main image is the jumbroton image -->
     <section id="main-space">
         <div id=main-image4></div>
-        <div id="main-me" style="text-align: center;">
 
-            <div class="main-me-text">
-                <div class="title">
-                    <h2>Project Manager / Trainee Full Stake Developer</h2>
-                    <h3>Personal Portfolio</h3>
-                </div>
+        <!-- the text within the main image -->
+        <div class="main-me-text">
+            <div class="connect-title">
+                <h1>No Such Thing As<br>
+                    Silly Question</h1>
             </div>
-            <!--add a button here-->
-            <!--           Button to be-->
         </div>
+        <!--add a button here-->
+        <!--           Button to be-->
     </section>
 
     <!-- The body of the content displayed which is for the questoin and contact form -->
@@ -71,8 +70,11 @@
                 or even looking for an idea to be developed?
             </div>
         </div>
-<br>
-<br>
+        <br>
+        <br>
+
+<!--        -->
+        <div class="connect-form">
         <div class="center-form">
 
             <h2 id="contactlabel">Contact Form</h2>
@@ -122,33 +124,36 @@
 
             </form>
         </div>
+        </div>
     </section>
 
     <footer class="footer-brief">
         <div class="row no-gutter footer-container">
 
             <div class="col-12 col-md-4 quick-links">
-                <a href="#" class="">
-                    <h5 id="#">Quick Links</h5>
-                </a>
+
+                    <h5 id="qlabel">Quick Links</h5>
                 <div class="qlinks">
                     <a href="contact_me.html" class="foot-email">
-                        <h5 id="email_address_head"><strong>Home</strong></h5>
+                        <h5 id="email_address_head">Home</h5>
                     </a>
 
                     <a href="my_projects.html" class="foot-projects">
                         <h5 id="project_footer_head">My Journey</h5>
                     </a>
+
                     <a href="my_projects.html" class="foot-projects">
                         <h5 id="project_footer_head">Portfolio</h5>
                     </a>
+
                     <a href="my_projects.html" class="foot-projects">
                         <h5 id="project_footer_head">Connect</h5>
                     </a>
+
                 </div>
             </div>
             <div class="col-12 col-md-4 social_links">
-                <h5 id="">Let's Connect</h5>
+                <h5 id="qlabels">Let's Connect</h5>
 
                 <div class="logos">
 
@@ -172,8 +177,9 @@
             </div>
 
             <div class="col-12 col-md-4">
+
+                    <h5 id="qlabels">Take A Copy Of My CV!</h5>
                 <a href="" target="_blank">
-                    <h5>Take A Copy Of My CV!</h5>
                     <div class="logos">
                         <i class="fas fa-file" aria-hidden="true"></i>
                     </div>
