--- a/journey.html
+++ b/journey.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Adnan Muhtadi Portfolio</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Adnan Muhtadi Portfolio</title>
 
-        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 
-        <!-- font awesome for icons -->
-        <script src="https://kit.fontawesome.com/9b32562ec0.js" crossorigin="anonymous"></script>
+    <!-- font awesome for icons -->
+    <script src="https://kit.fontawesome.com/9b32562ec0.js" crossorigin="anonymous"></script>
 
-        <!-- CSS only -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- CSS only -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-    </head>
+</head>
 
-    <body>
+<body>
 
-        <!--        navigation bar with the active class when on the actual page  -->
-        <header>
-            <a href="index.html">
-                <h2 id="home" a href="index.html">Adnan Muhtadi</h2>
-            </a>
+    <!--        navigation bar with the active class when on the actual page  -->
+    <header>
+        <a href="index.html">
+            <h2 id="home" a href="index.html">Adnan Muhtadi</h2>
+        </a>
 
-            <nav>
-                <ul id="navbar-menu">
-                    <li>
-                        <a href="connect.html">Connect</a>
-                    </li>
+        <nav>
+            <ul id="navbar-menu">
+                <li>
+                    <a href="connect.html">Connect</a>
+                </li>
 
-                    <li>
-                        <a href="portfolio.html">Portfolio</a>
-                    </li>
+                <li>
+                    <a href="portfolio.html">Portfolio</a>
+                </li>
 
-                    <li>
-                        <a class="active" href="journey.html">My Journey</a>
-                    </li>
+                <li>
+                    <a class="active" href="journey.html">My Journey</a>
+                </li>
 
-                </ul>
-            </nav>
-        </header>
+            </ul>
+        </nav>
+    </header>
 
     <!--image header of the page-->
     <section id="main-space">
@@ -53,14 +53,40 @@
         </div>
     </section>
 
+<!--   the section where the content of my journey would be placed -->
     <section id="about-me">
         <h2 id="header">From The Beginning</h2>
 
-
+<!-- having dates, places of where it took place, and my roles-->
         <div class="journey">
             <div class="journey-item" data-dates="May 19th 1990">
                 <h4>Date of Birth</h4>
                 <p>The journey begins</p>
+            </div>
+
+            <div class="journey-item" data-dates="December 4th 2006">
+                <h4>Leisure Connection</h4>
+                <p>Life Guard / Swimming Teacher Assistant</p>
+            </div>
+
+            <div class="journey-item" data-dates="September 3rd 2007">
+                <h4>Oaklands College</h4>
+                <p>BTEC National Diploma for ICT Practioners (Distinction)</p>
+            </div>
+
+            <div class="journey-item" data-dates="March 9th 2008">
+                <h4>Verulam Swimming Club ASC</h4>
+                <p>Website Administrator</p>
+            </div>
+
+            <div class="journey-item" data-dates="September 7th 2009">
+                <h4>Graduated in Information Technology </h4><h4>(Web-Based Systems) BSc (Hons) - 2.1</h4>
+                <p>University of Hertfordshire</p>
+            </div>
+
+            <div class="journey-item" data-dates="June 20th 2011">
+                <h4>Viglen LTD</h4>
+                <p>ERP Configurator (Internship)</p>
             </div>
 
             <div class="journey-item" data-dates="May 12th 2014">
@@ -68,7 +94,7 @@
                 <p>Application Support Analyst</p>
                 <p>Service Delivery Engineer</p>
                 <p>Technical Project Manager</p>
-                            </div>
+            </div>
 
             <div class="journey-item" data-dates="July 18th 2018">
                 <h4>Giant Group</h4>
@@ -84,6 +110,12 @@
                 <h4>ITOM Solution</h4>
                 <p>Project Manager</p>
             </div>
+        </div>
+
+        <div class="journey-finisher">
+        <h3>
+            To know more about me, take a look at my CV at the bottom of the page.
+            </h3>
         </div>
     </section>
 
