fixed wording in my journey
reworded how i would navigate people to my CV

--- a/journey.html
+++ b/journey.html
@@ -43,6 +43,7 @@
         </nav>
     </header>
 
+
     <!--image header of the page-->
     <section id="main-space">
         <div id=main-image2></div>
@@ -113,9 +114,7 @@
         </div>
 
         <div class="journey-finisher">
-        <h3>
-            To know more about me, take a look at my CV at the bottom of the page.
-            </h3>
+            <h3><a href="" target="_blank">CLICK HERE </a>to know more about me</h3>
         </div>
     </section>
 
