adding images and building the interest section
adding images for the interets within index.html as well as linking my CV to all the footers and journey page.

--- a/connect.html
+++ b/connect.html
@@ -183,7 +183,7 @@
             <div class="col-12 col-md-4">
 
                 <h5 id="qlabels">Take A Copy Of My CV!</h5>
-                <a href="" target="_blank">
+                <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank">
                     <div class="logos">
                         <i class="fas fa-file" aria-hidden="true"></i>
                     </div>
