--- a/journey.html
+++ b/journey.html
@@ -114,7 +114,7 @@
         </div>
 
         <div class="journey-finisher">
-            <h3><a href="" target="_blank">CLICK HERE </a>to know more about me</h3>
+            <h3><a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank">CLICK HERE </a>to know more about me</h3>
         </div>
     </section>
 
@@ -175,7 +175,7 @@
             <div class="col-12 col-md-4">
 
                 <h5 id="qlabels">Take A Copy Of My CV!</h5>
-                <a href="" target="_blank">
+                <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank">
                     <div class="logos">
                         <i class="fas fa-file" aria-hidden="true"></i>
                     </div>
