Nmae of files and comments
Renames the name the image files as well as adding comments to the different html files.

--- a/connect.html
+++ b/connect.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <!--        navigation bar with the active class when on the actual page  -->
+    <!--navigation bar with the active class when on the actual page  -->
     <header>
         <a href="index.html">
             <h2 id="home" a href="index.html">Adnan Muhtadi</h2>
@@ -54,8 +54,7 @@
                     Silly Question</h1>
             </div>
         </div>
-        <!--add a button here-->
-        <!--           Button to be-->
+
     </section>
 
     <!-- The body of the content displayed which is for the questoin and contact form -->
@@ -73,7 +72,7 @@
         <br>
         <br>
 
-        <!--   grouping the form in a seperate div to provide it with a background with each input type assoicated with a label     -->
+        <!--grouping the form in a seperate div to provide it with a background with each input type assoicated with a label     -->
         <div class="connect-form">
             <div class="center-form">
                 <h2 id="contactlabel">Contact Form</h2>
@@ -127,11 +126,11 @@
         </div>
     </section>
 
-<!--   the footer consisting off quick links, social media (icons used from font awesome and the capability to download my CV in a pdf version-->
+    <!--the footer consisting off quick links, social media (icons used from font awesome and the capability to download my CV in a pdf version-->
     <footer class="footer-brief">
         <div class="row no-gutter footer-container">
 
-<!--           splitting the section focusing on the quck links -->
+            <!--splitting the section focusing on the quck links -->
             <div class="col-12 col-md-4 quick-links">
 
                 <h5 id="qlabel">Quick Links</h5>
@@ -155,7 +154,7 @@
                 </div>
             </div>
 
-            <!--           splitting the section focusing on the social links -->
+            <!--splitting the section focusing on the social links using the icons from font awesome-->
             <div class="col-12 col-md-4 social_links">
                 <h5 id="qlabels">Let's Connect</h5>
 
@@ -179,7 +178,7 @@
                 </div>
 
             </div>
-            <!--           splitting the section focusing on the CV download -->
+            <!--splitting the section focusing on the CV download -->
             <div class="col-12 col-md-4">
 
                 <h5 id="qlabels">Take A Copy Of My CV!</h5>
