--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <!--        navigation bar   -->
+    <!--        navigation bar with the active class when on the actual page  -->
     <header>
         <a href="index.html">
             <h2 class="active" id="home" a href="index.html">Adnan Muhtadi</h2>
@@ -47,7 +47,7 @@
     <section id="main-space">
         <div id=main-image></div>
         <div id="main-me">
-            <img src="assets/images/me.jpg" height="400px" width="400px">
+            <img src="assets/images/me.jpg" height="" width="400px">
 
             <div class="main-me-text">
                 <div class="title">
@@ -55,8 +55,6 @@
                     <h3>Personal Portfolio</h3>
                 </div>
             </div>
-            <!--add a button here-->
-            <!--           Button to be-->
         </div>
     </section>
 
@@ -65,7 +63,7 @@
 
         <!--description about myself-->
         <div class="about-me-section">
-            <img src="assets/images/photo-1538221776727-cffa3506f417.jpg" height="250" width="400px">
+            <img src="assets/images/chess.jpg" height="250" width="400px">
 
             <div class="about-me-des">
                 A versatile Project Manager professional with over 5 years’ experience with enterprise-level and consumer-focused technology solutions. Champions supportive and collaborative team environments to effectively realise business objectives with proven success in developing and implementing internal and consumer-facing IP.
@@ -74,10 +72,10 @@
         </div>
     </section>
 
+    <!--   Covering the interest that i have in a column format while having the text coming from both side of the images that was all taken from https://unsplash.com/-->
     <section class="interest-section">
         <h2 id="header">Interests</h2>
         <div class="categories">
-            <!--                add the categories in the necessary         -->
 
             <div class="row">
                 <div class="column">
@@ -85,23 +83,23 @@
                 </div>
 
                 <div class="column">
-                    <img id="interest" src="assets/images/travelling.jpg" height="300px" width="300px">
+                    <img id="interest" src="assets/images/travelling.jpg" height="100%" width="100%">
                 </div>
 
                 <div class="column left-comment">
                     <h2>Travelling</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+                    <p>Exploring the world and seeing the different nature beauties that it provides. Experience something unfamiliar and leave with new skills or knowledge</p>
                 </div>
             </div>
 
             <div class="row">
                 <div class="column right-comment">
                     <h2>Programming</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+                    <p>The pleasure of making things that are useful to yourself as well as for other people. One of most satisfying aspects of the programming is seeing code you wrote deployed in a live environment</p>
                 </div>
 
                 <div class="column">
-                    <img id="interest" src="assets/images/programming.jpg" height="300px" width="300px">
+                    <img id="interest" src="assets/images/programming.jpg" height="100%" width="100%">
                 </div>
 
                 <div class="column">
@@ -115,23 +113,23 @@
                 </div>
 
                 <div class="column">
-                    <img id="interest" src="assets/images/sports.jpg" height="300px" width="300px">
+                    <img id="interest" src="assets/images/sports.jpg" height="v" width="100%">
                 </div>
 
                 <div class="column left-comment">
                     <h2>Fitness</h2>
-                    <p>Exercising and taking part in sporting activities for example rugby, swimming, boxing and going to the gym.</p>
+                    <p>Exercising and taking part in sporting activities is one of my biggest enjoyments.</p>
                 </div>
             </div>
 
             <div class="row">
                 <div class="column right-comment">
                     <h2>Cooking</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas sit amet pretium urna. Vivamus venenatis velit nec neque ultricies, eget elementum magna tristique. Quisque vehicula, risus eget aliquam placerat, purus leo tincidunt eros, eget luctus quam orci in velit. Praesent scelerisque tortor sed accumsan convallis.</p>
+                    <p>I enjoy cooking i find it extremely interesting cooking different cuisines as well as making something out of different ingredients and spices.</p>
                 </div>
 
                 <div class="column">
-                    <img id="interest" src="assets/images/cooking.jpg" height="300px" width="300px">
+                    <img id="interest" src="assets/images/cooking.jpg" height="100%" width="100%">
                 </div>
 
                 <div class="column">
@@ -142,11 +140,11 @@
         </div>
     </section>
 
-    <!--   the footer consisting off quick links, social media (icons used from font awesome and the capability to download my CV in a pdf version-->
+    <!--the footer consisting off quick links, social media (icons used from font awesome and the capability to download my CV in a pdf version-->
     <footer class="footer-brief">
         <div class="row no-gutter footer-container">
 
-            <!--           splitting the section focusing on the quck links -->
+            <!--splitting the section focusing on the quck links -->
             <div class="col-12 col-md-4 quick-links">
 
                 <h5 id="qlabel">Quick Links</h5>
@@ -170,7 +168,7 @@
                 </div>
             </div>
 
-            <!--           splitting the section focusing on the social links -->
+            <!--splitting the section focusing on the social links using the icons from font awesome-->
             <div class="col-12 col-md-4 social_links">
                 <h5 id="qlabels">Let's Connect</h5>
 
@@ -194,7 +192,8 @@
                 </div>
 
             </div>
-            <!--           splitting the section focusing on the CV download -->
+
+            <!--splitting the section focusing on the CV download -->
             <div class="col-12 col-md-4">
 
                 <h5 id="qlabels">Take A Copy Of My CV!</h5>
