--- a/journey.html
+++ b/journey.html
@@ -48,9 +48,6 @@
     <section id="main-space">
         <div id=main-image2></div>
         <div id="main-me" style="text-align: center;">
-
-            <!--add a button here-->
-            <!--           Button to be-->
         </div>
     </section>
 
@@ -60,54 +57,54 @@
 
 <!-- having dates, places of where it took place, and my roles-->
         <div class="journey">
-            <div class="journey-item" data-dates="May 19th 1990">
+            <div class="journey-item" journey-dates="May 19th 1990">
                 <h4>Date of Birth</h4>
                 <p>The journey begins</p>
             </div>
 
-            <div class="journey-item" data-dates="December 4th 2006">
+            <div class="journey-item" journey-dates="December 4th 2006">
                 <h4>Leisure Connection</h4>
                 <p>Life Guard / Swimming Teacher Assistant</p>
             </div>
 
-            <div class="journey-item" data-dates="September 3rd 2007">
+            <div class="journey-item" journey-dates="September 3rd 2007">
                 <h4>Oaklands College</h4>
                 <p>BTEC National Diploma for ICT Practioners (Distinction)</p>
             </div>
 
-            <div class="journey-item" data-dates="March 9th 2008">
+            <div class="journey-item" journey-dates="March 9th 2008">
                 <h4>Verulam Swimming Club ASC</h4>
                 <p>Website Administrator</p>
             </div>
 
-            <div class="journey-item" data-dates="September 7th 2009">
+            <div class="journey-item" journey-dates="September 7th 2009">
                 <h4>Graduated in Information Technology </h4><h4>(Web-Based Systems) BSc (Hons) - 2.1</h4>
                 <p>University of Hertfordshire</p>
             </div>
 
-            <div class="journey-item" data-dates="June 20th 2011">
+            <div class="journey-item" journey-dates="June 20th 2011">
                 <h4>Viglen LTD</h4>
                 <p>ERP Configurator (Internship)</p>
             </div>
 
-            <div class="journey-item" data-dates="May 12th 2014">
+            <div class="journey-item" journey-dates="May 12th 2014">
                 <h4>Hogarth WorldWide</h4>
                 <p>Application Support Analyst</p>
                 <p>Service Delivery Engineer</p>
                 <p>Technical Project Manager</p>
             </div>
 
-            <div class="journey-item" data-dates="July 18th 2018">
+            <div class="journey-item" journey-dates="July 18th 2018">
                 <h4>Giant Group</h4>
                 <p>Project Manager</p>
             </div>
 
-            <div class="journey-item" data-dates="February 11th 2019">
+            <div class="journey-item" journey-dates="February 11th 2019">
                 <h4>McCann Worldgroup</h4>
                 <p>Product Manager</p>
             </div>
 
-            <div class="journey-item" data-dates="August 10th 2020">
+            <div class="journey-item" journey-dates="August 10th 2020">
                 <h4>ITOM Solution</h4>
                 <p>Project Manager</p>
             </div>
@@ -119,11 +116,11 @@
     </section>
 
 
-    <!--   the footer consisting off quick links, social media (icons used from font awesome and the capability to download my CV in a pdf version-->
+    <!--the footer consisting off quick links, social media (icons used from font awesome and the capability to download my CV in a pdf version-->
     <footer class="footer-brief">
         <div class="row no-gutter footer-container">
 
-            <!--           splitting the section focusing on the quck links -->
+            <!--splitting the section focusing on the quck links -->
             <div class="col-12 col-md-4 quick-links">
 
                 <h5 id="qlabel">Quick Links</h5>
@@ -147,7 +144,7 @@
                 </div>
             </div>
 
-            <!--           splitting the section focusing on the social links -->
+            <!--splitting the section focusing on the social links using the icons from font awesome-->
             <div class="col-12 col-md-4 social_links">
                 <h5 id="qlabels">Let's Connect</h5>
 
@@ -171,7 +168,7 @@
                 </div>
 
             </div>
-            <!--           splitting the section focusing on the CV download -->
+            <!--splitting the section focusing on the CV download -->
             <div class="col-12 col-md-4">
 
                 <h5 id="qlabels">Take A Copy Of My CV!</h5>
