--- a/portfolio.html
+++ b/portfolio.html
@@ -1,15 +1,127 @@
-
 <!DOCTYPE html>
 <html>
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Adnan Muhtadi Portfolio</title>
+
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+
+        <!-- font awesome for icons -->
+        <script src="https://kit.fontawesome.com/9b32562ec0.js" crossorigin="anonymous"></script>
+
+        <!-- CSS only -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
     </head>
+
     <body>
 
+        <!--        navigation bar with the active class when on the actual page  -->
+        <header>
+            <a href="index.html">
+                <h2 id="home" a href="index.html">Adnan Muhtadi</h2>
+            </a>
 
+            <nav>
+                <ul id="navbar-menu">
+                    <li>
+                        <a href="connect.html">Connect</a>
+                    </li>
+
+                    <li>
+                        <a class="active" href="portfolio.html">Portfolio</a>
+                    </li>
+
+                    <li>
+                        <a href="journey.html">My Journey</a>
+                    </li>
+
+                </ul>
+            </nav>
+        </header>
+
+
+        <!--image header of the page-->
+        <section id="main-space">
+            <div id=main-image3></div>
+            <div id="main-me" style="text-align: center;">
+            </div>
+        </section>
+
+        <!--   the section where the content of my journey would be placed -->
+        <section id="about-me">
+
+        </section>
+
+
+        <!--the footer consisting off quick links, social media (icons used from font awesome and the capability to download my CV in a pdf version-->
+        <footer class="footer-brief">
+            <div class="row no-gutter footer-container">
+
+                <!--splitting the section focusing on the quck links -->
+                <div class="col-12 col-md-4 quick-links">
+
+                    <h5 id="qlabel">Quick Links</h5>
+                    <div class="qlinks">
+                        <a href="contact_me.html" class="foot-email">
+                            <h5 id="email_address_head">Home</h5>
+                        </a>
+
+                        <a href="my_projects.html" class="foot-projects">
+                            <h5 id="project_footer_head">My Journey</h5>
+                        </a>
+
+                        <a href="my_projects.html" class="foot-projects">
+                            <h5 id="project_footer_head">Portfolio</h5>
+                        </a>
+
+                        <a href="my_projects.html" class="foot-projects">
+                            <h5 id="project_footer_head">Connect</h5>
+                        </a>
+
+                    </div>
+                </div>
+
+                <!--splitting the section focusing on the social links using the icons from font awesome-->
+                <div class="col-12 col-md-4 social_links">
+                    <h5 id="qlabels">Let's Connect</h5>
+
+                    <div class="logos">
+
+                        <a href="https://www.facebook.com/adnan.muhtadi/" target="_blank"><i class="fab fa-facebook"></i></a>
+
+                        <a href="https://www.instagram.com/adnanmuhtadi/?hl=en" target="_blank"><i class="fab fa-instagram"></i></a>
+
+                        <a href="https://twitter.com/adnanmuhtadi" target="_blank"><i class="fab fa-twitter"></i></a>
+
+                        <a href="https://www.youtube.com/channel/UCt64hh9dMACG43Vuzc5DrtQ?view_as=subscriber" target="_blank"><i class="fab fa-youtube"></i></a>
+
+                        <a href="https://www.linkedin.com/in/adnan-muhtadi-3588243b/" target="_blank"><i class="fab fa-linkedin"></i></a>
+
+                        <a href="https://www.snapchat.com/l/en-gb/" target="_blank"><i class="fab fa-snapchat"></i></a>
+
+                        <a href="https://www.pinterest.co.uk/adnanmuhtadi/_saved/" target="_blank"><i class="fab fa-pinterest"></i></a>
+
+                        <a href="https://github.com/adnanmuhtadi" target="_blank"><i class="fab fa-github"></i></a>
+                    </div>
+
+                </div>
+                <!--splitting the section focusing on the CV download -->
+                <div class="col-12 col-md-4">
+
+                    <h5 id="qlabels">Take A Copy Of My CV!</h5>
+                    <a href="assets/cv/adnan-muhtadi-cv.pdf" target="_blank">
+                        <div class="logos">
+                            <i class="fas fa-file" aria-hidden="true"></i>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </footer>
 
     </body>
+
 </html>
